# subTranslate

./: README.md  main.py  pyproject.toml  requirements.txt  subtitle.srt
